# brain-tumor-detection-transfer-learning

./: .gitignore  01_exploratory_data_analyis_EDA.ipynb  01_preprocessing.ipynb  02_model_building_training.ipynb  Dockerfile  classification_report.json  model_trainer.py  pyproject.toml  readme.md  test.ipynb
.devcontainer/: devcontainer.json
conf/: config.yaml
notebooks/: 001_IoU_experiments.ipynb  01_exploratory_data_analyis_EDA.ipynb  02_classifier_building.ipynb  02_model_building_training.ipynb  03_model_evaluation.ipynb  03_regression_building.ipynb  04_model_building_training.ipynb  05_model_evaluation.ipynb
src/: train_resnet101_brain_tumor_detector.py
src/data_handler/: annotation_processor.py  data_loader.py  preprocessor.py
src/losses/: __init__.py  binary_weighted_loss.py  iou_loss.py
src/models/: resnet101.py  resnet101V2.py  resnet50.py
src/utils/: logs.py  utils.py  visualization_funcs.py
tests/: test_iou_loss.py
utils/: bounding_box_funcs.py  custom_dataset_loader.py  prepare_dataset.py  utils.py  visualization_funcs.py
